# prosper_sample

./: .gitignore  CMakeLists.txt  LICENSE-MIT  LICENSE.md  README.md  imgui.ini  krapfen.yaml  player.yaml  rigid_test.yaml
assets/models/: character.glb.import  krapfen.glb  krapfen.glb.import  krapfen_a.ktx2
assets/models/Sponza/glTF/: 5061699253647017043.png.ktx2  6772804448157695701.ktx2  8006627369776289000.png.ktx2  Sponza2.gltf  Sponza2.gltf.col  white.png.ktx2
assets/models/Sponza/glTF/textures/: material_0_albedo.png.import  material_0_normal.png.import  material_0_orm.png.import  material_10_albedo.png.import  material_10_normal.png.import  material_10_orm.png.import  material_11_albedo.png.import  material_11_normal.png.import  material_11_orm.png.import  material_12_albedo.png.import  material_12_normal.png.import  material_12_orm.png.import  material_13_albedo.png.import  material_13_normal.png.import  material_13_orm.png.import  material_14_albedo.png.import  material_14_normal.png.import  material_14_orm.png.import  material_15_albedo.png.import  material_15_normal.png.import  material_15_orm.png.import  material_16_albedo.png.import  material_16_normal.png.import  material_16_orm.png.import  material_17_albedo.png.import  material_17_normal.png.import  material_17_orm.png.import  material_18_albedo.png.import  material_18_normal.png.import  material_18_orm.png.import  material_19_albedo.png.import  material_19_normal.png.import  material_19_orm.png.import  material_1_albedo.png.import  material_1_normal.png.import  material_1_orm.png.import  material_20_albedo.png.import  material_20_normal.png.import  material_20_orm.png.import  material_21_albedo.png.import  (+33 more)
assets/textures/: skybox create.txt
data/: level.yaml
src/: main.cpp
src/components/: rotate.cpp  rotate.h
